# Compound-LM

./: .gitignore  README.md  TRAINING_SETUP.md  pyproject.toml
contracts/: eval_v1.yaml  health.yaml
docs/: build-plan.md  cost-reduction-plan.md
evals/: __init__.py  run.py
ledger/: make_table.py  runs.jsonl
scripts/: bootstrap.py  build_corpus.py  check_reex.py  cost_reduction_plan.py  final_experiment.py  finalize_validation.py  grow_and_continue.py  grow_reex.py  kaggle_probe_plan.py  kaggle_validation.py  kaggle_verify.py  preflight.py  run_experiment.py  run_matrix.py  run_protocol.py  sanity_validation.py  scale_projection.py  train_reex15.py  verify_all.py  verify_levers.py  verify_speedup.py
src/: __init__.py
tests/: conftest.py  resume_worker.py  test_audit_spine.py  test_binshard.py  test_binshard_training.py  test_budget.py  test_compounding.py  test_cost_model.py  test_curriculum.py  test_data_pipeline.py  test_depth_growth.py  test_document_attention.py  test_eval_runner.py  test_experiment_robustness.py  test_final_corpus.py  test_growth.py  test_intrinsic_eval.py  test_kaggle_resume.py  test_llama_growth.py  test_make_table.py  test_model_adapter.py  test_model_init.py  test_muon.py  test_muon_amp.py  test_overflow_resilience.py  test_packing.py  test_phase0_regressions.py  test_preflight.py  test_realistic_compounding.py  test_reex15_sdpa_corpus.py  test_reex_model.py  test_reference_resume.py  test_run_experiment.py  test_run_matrix.py  test_session_resilience.py  test_session_resume_equivalence.py  test_systems.py  test_systems_precision.py  (+3 more)
(+43 files in other folders)
